<resources>
    <string name="app_name">Challenge</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

    <string name="no_data_available">No Data available.</string>
    <string name="image_view_splash_logo">Application Logo</string>
    <string name="api_url">https://jobs.github.com/</string>
    <string name="hint_username_or_email">your_email@email.com</string>
    <string name="hint_password">Password</string>
    <string name="imageView_logo_content_description">Application logo</string>
    <string name="autofillHint_username_or_email">email</string>
    <string name="button_login">Login</string>
    <string name="forgot_your_password">Forgot yout password? Click here.</string>
    <string name="don_t_have_an_account_register_now">Don\'t have an account? Register now</string>
    <string name="autofillHint_password">password</string>
    <string name="image_button_information_content_description">Button to check for more informations about the application</string>
    <string name="image_view_product_description">Product image</string>
    <string name="text_view_sign_up">Sign up</string>
    <string name="hint_name">Name</string>
    <string name="button_sign_up">Create Account</string>
    <string name="text_view_already_member">Already a member? Login</string>
    <string name="autofillHint_name">name</string>
    <string name="main_drawer_item_logout">Logout</string>
</resources>
