<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />
        <variable
            name="signupViewModel"
            type="br.com.jonathan.challenge.ui.viewmodel.SignupViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/background"
        android:fitsSystemWindows="true">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="@{signupViewModel.isLoading ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="220dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/imageView_logo_content_description"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toTopOf="@+id/guideline_sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="20dp"
            app:layout_constraintGuide_percent="0.30" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="25dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:cardCornerRadius="17dp"
            app:cardElevation="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_sign_up">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="24dp"
                android:paddingRight="24dp">

                <!--  Name Label -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/edit_text_sign_up_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="@string/autofillHint_name"
                        android:text="@={signupViewModel.name}"
                        android:hint="@string/hint_name"
                        android:inputType="textCapWords" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/edit_text_sign_up_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={signupViewModel.email}"
                        android:autofillHints="@string/autofillHint_username_or_email"
                        android:hint="@string/hint_username_or_email"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Password Label -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_name_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_input_name_or_email"
                    app:passwordToggleEnabled="true">

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/edit_text_sign_up_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="@string/autofillHint_password"
                        android:drawablePadding="5dp"
                        android:ems="10"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"
                        android:text="@={signupViewModel.password}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_name_sign_up_password_confirmation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_input_name_or_email"
                    app:passwordToggleEnabled="true">

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/edit_text_sign_up_password_confirmation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="@string/autofillHint_password"
                        android:drawablePadding="5dp"
                        android:ems="10"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"
                        android:text="@={signupViewModel.confirmationPassword}" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Signup Button -->
                <Button
                    android:id="@+id/btn_signup"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="24dp"
                    android:onClick="@{() -> signupViewModel.register()}"
                    android:padding="12dp"
                    android:text="@string/button_sign_up"
                    app:layout_constraintHorizontal_bias="0.0" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/text_login_already_member"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"

            android:text="@string/text_view_already_member"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>