<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />
        <variable
            name="loginViewModel"
            type="br.com.jonathan.challenge.ui.viewmodel.LoginViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/background">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="@{loginViewModel.isLoading ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/button_information"
            android:contentDescription="@string/image_button_information_content_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="9dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:baselineAligned="true"
            android:gravity="end"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView_logo"
            android:contentDescription="@string/imageView_logo_content_description"
            android:src="@drawable/logo"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="50dp"
            android:padding="30dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.444"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.40" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="25dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            app:cardCornerRadius="17dp"
            app:cardElevation="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="40dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="40dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_name_or_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <EditText
                        android:id="@+id/edit_text_name_or_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="5dp"
                        android:ems="10"
                        android:text="@={loginViewModel.usernameOrEmail}"
                        android:autofillHints="@string/hint_username_or_email"
                        android:hint="@string/hint_username_or_email"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_name_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_input_name_or_email"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/edit_text_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="5dp"
                        android:ems="10"
                        android:text="@={loginViewModel.password}"
                        android:hint="@string/hint_password"
                        android:autofillHints="@string/autofillHint_password"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/button_authenticate"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/button_login"
                    android:onClick="@{() -> loginViewModel.authenticate()}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_input_name_password" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/text_view_register_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/don_t_have_an_account_register_now"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>